# egui_gallery

./: .env  Cargo.toml  index.html
.sqlx/: query-0098c48b38a1adef61466428012e15ac81a3df1f4548db916ac78c21c3396808.json  query-12517887aac89bf7a5a6b42501a61597b7cef085c30e6fb7eea6c8674ca07553.json  query-90cdfcbc38a4e45d990b822d941d4b50cb1451a31690c6464e81a7b152e6234a.json  query-e1670f7718bb439b72ab33b1fa137cc393fec746f0fd3823f4f78d298b617d28.json
frontend/: Cargo.toml
frontend/src/: main.rs
server/: Cargo.toml
server/migrations/: 20250926170142_add_image-table.sql
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
