[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
anyhow-http = { version = "0.4.3", features = ["axum", "derive", "json"] }
axum = { version = "0.7.8", features = ["json", "tokio"] }
directories = "6.0.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
hex = "0.4.3"
image = "0.25.8"
rand = "0.9.2"
reqwest = { version = "0.12.23", default-features = false, features = [
  "rustls-tls",
  "http2",
  "charset",
  "json",
  "stream",
] }
rseek = "0.3.0"
serde = { version = "1.0.227", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "derive",
  "migrate",
  "chrono",
  "json",
] }
thumbhash = "0.1.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing-subscriber = "0.3.20"
shared = { workspace = true }
